<resources>
    <string name="app_name">AppTest</string>
    <string name="description_logo">logo</string>
    <string name="text_button_send">Login</string>
    <string name="background_image_description">background image</string>
    <string name="hint_password">password</string>
    <string name="hint_username">email</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>